--- a/raise-funds-backend/pom.xml
+++ b/raise-funds-backend/pom.xml
@@ -99,6 +99,10 @@
 			<version>0.32</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
