--- a/raise-funds-backend/src/main/resources/application-dev.yml
+++ b/raise-funds-backend/src/main/resources/application-dev.yml
@@ -28,5 +28,5 @@ weixin:
     getToken: https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid={APPID}&secret={appSecret}
     getUserInfo: https://api.weixin.qq.com/cgi-bin/user/info?access_token={access_token}&openid={openId}&lang=zh_CN
     getWebAccessToken: https://api.weixin.qq.com/sns/oauth2/access_token?appid={APPID}&secret={appSecret}&code={code}&grant_type=authorization_code
-
+    getJsApiTicket: https://api.weixin.qq.com/cgi-bin/ticket/getticket?access_token={access_token}&type=jsapi
 
