--- a/core/raise-funds-backend/src/main/resources/application-dev.yml
+++ b/core/raise-funds-backend/src/main/resources/application-dev.yml
@@ -4,9 +4,11 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/raise_funds_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://39.98.152.84:3306/raise_funds_db?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
     password: root
+    tomcat:
+      init-s-q-l: SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci
   mvc:
     servlet:
       path: /raiseFunds
