--- a/core/raise-funds-management/src/main/resources/application-dev.yml
+++ b/core/raise-funds-management/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
           username: root
           password: root
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://localhost:3306/raise_funds_db?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT%2b8
+          url: jdbc:mysql://127.0.0.1:3306/raise_funds_db?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT%2b8
   redis:
     key:
       prefix:
